Centered navbar and fix shifting page to the left

--- a/cs_degree_planner/forecast/static/css/navbar.css
+++ b/cs_degree_planner/forecast/static/css/navbar.css
@@ -115,7 +115,7 @@ a {
 /*---------- Field --------------------*/
 
 .fld {
-	background: rgba(0,0,0,0.00);
+	background: rgba(0, 0, 0, 0.00);
 	color: #d9d0c1;
 	padding: 15px 65px 15px 30px;
 	border-radius: 30px;
@@ -138,7 +138,7 @@ a {
 }
 
 input {
-	background: rgba(0,0,0,0.00);
+	background: rgba(0, 0, 0, 0.00);
 	color: #d9d0c1;
 	padding: 15px 65px 15px 30px;
 	border-radius: 30px;
@@ -156,7 +156,7 @@ input:hover {
 
 input:focus {
 	border: 3px solid #3A8795;
-	background:rgba(26,61,67,0.3);
+	background: rgba(26, 61, 67, 0.3);
 	outline: none;
 }
 
@@ -164,19 +164,23 @@ input:focus {
 
 nav {
 	border-radius: 0;
-	margin-top: -20px;
-	margin-left: -20px;
-	width: 110%;
+	width: 100%;
 	height: 80px;
 	background: rgba(58, 135, 149, 1);
 }
 
 li {
-	padding: 0 8%;
+	padding: 0 12%;
 	display: inline-block;
 }
 
 ul {
+	margin-top: 0px;
+	text-align: center;
+	white-space: nowrap;
+}
+
+#dropdown-ul {
 	margin-top: 0px;
 	margin-left: -9%;
 	text-align: center;
@@ -201,9 +205,13 @@ ul>li {
 	display: inline-block;
 }
 
+ul.navul {
+	padding: 0;
+}
+
 ul.navul li a {
 	line-height: 80px;
-	padding: 0 80px;
+	padding: 0;
 	height: 80px;
 	color: #d9d0c1;
 	-webkit-transition: all .1s ease-out;
@@ -363,6 +371,7 @@ ul li:hover .dropOut {
 	background: rgba(19, 51, 61, 0.2);
 	padding: 10px;
 	border-radius: 10px;
+
 }
 
 #jeanzlogo {
